--- a/notebooks/preprocesed/yaml_creation.ipynb
+++ b/notebooks/preprocesed/yaml_creation.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cae8c154",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'train': str(Path('dataset/yolo/images/train').resolve()),\n",
-    "    'val': str(Path('dataset/yolo/images/val').resolve()),\n",
+    "    'train': str(Path('/content/drive/MyDrive/PlantDoc-Object-Detection/dataset/yolo/images/train').resolve()),\n",
+    "    'val': str(Path('/content/drive/MyDrive/PlantDoc-Object-Detection/dataset/yolo/images/val').resolve()),\n",
     "    'nc': len(classes),\n",
     "    'names': classes\n",
     "}\n",
